Correct spacing and styling in CSS

--- a/css/style.css
+++ b/css/style.css
@@ -247,33 +247,51 @@ i:hover {
 section#sponsors {
   text-align: center;
   padding-top: 40px;
-  padding-bottom: 40px; }
+  padding-bottom: 40px;
+}
   section#sponsors .sponsors {
-    background-color: #ffffff; }
+    background-color: #ffffff;
+  }
+
   section#sponsors p {
     color: #0b3b4b;
     font-size: 1.4em;
     padding: 16px;
-    margin: 0; }
+    margin: 0;
+  }
+
   section#sponsors img {
     opacity: 0.75;
     padding: 1.5em;
-    vertical-align: middle; }
+    vertical-align: middle;
+  }
+
   section#sponsors .tier {
-    padding: 0 5%; }
+    padding: 0 5%;
+  }
+
   section#sponsors a, section#sponsors a:visited {
-    text-decoration: none; }
+    text-decoration: none;
+  }
+
   section#sponsors img:hover {
-    opacity: 1; }
+    opacity: 1;
+  }
+
   section#sponsors .gold img {
     max-width: 400px;
-    max-height: 150px; }
+    max-height: 150px;
+  }
+
   section#sponsors .silver img {
     max-width: 350px;
-    max-height: 200px; }
+    max-height: 200px;
+  }
+
   section#sponsors .bronze img {
     max-width: 250px;
-    max-height: 125px; }
+    max-height: 125px;
+  }
 
 section#partners {
   text-align: center;
